# satsudoku

./: .gitignore  README.md  TODO  benchmark  config.json  puzzle.cnf  pyproject.toml  sat2sud  sud2sat  test.cnf  tester
benchmarker/: __init__.py  satsolver.py  sattester.py
cnf/: p096_sudoku_1.txt  p096_sudoku_10.txt  p096_sudoku_11.txt  p096_sudoku_12.txt  p096_sudoku_13.txt  p096_sudoku_14.txt  p096_sudoku_15.txt  p096_sudoku_16.txt  p096_sudoku_17.txt  p096_sudoku_18.txt  p096_sudoku_19.txt  p096_sudoku_2.txt  p096_sudoku_20.txt  p096_sudoku_21.txt  p096_sudoku_22.txt  p096_sudoku_23.txt  p096_sudoku_24.txt  p096_sudoku_25.txt  p096_sudoku_26.txt  p096_sudoku_27.txt  p096_sudoku_28.txt  p096_sudoku_29.txt  p096_sudoku_3.txt  p096_sudoku_30.txt  p096_sudoku_31.txt  p096_sudoku_32.txt  p096_sudoku_33.txt  p096_sudoku_34.txt  p096_sudoku_35.txt  p096_sudoku_36.txt  p096_sudoku_37.txt  p096_sudoku_38.txt  p096_sudoku_39.txt  p096_sudoku_4.txt  p096_sudoku_40.txt  p096_sudoku_41.txt  p096_sudoku_42.txt  p096_sudoku_43.txt  p096_sudoku_44.txt  p096_sudoku_45.txt  (+9 more)
data/: sudoku_rules.txt  sudoku_rules_efficient.txt  sudoku_rules_extended.cnf  sudoku_rules_minimal.cnf  sudoku_rules_out.txt
data/puzzles/: sepb.txt
satcoder/: __init__.py  cnf.py  sudoku.py
src/: benchmarking.py  constants.py  convertCNF.py  convertSUD.py  tableMD.py
src/benchmarker/: benchmark.py  sattester.py
src/mdtable/: __init__.py  mdtable.py
src/satcoder/: cnf.py  sat2sud.py  sud2sat.py  sudoku.py
src/satmark/: __init__.py  benchmark.py  conf.py  satsolver.py  sattester.py
